# bebop_ros

./: .gitattributes  .gitignore  LICENSE  README.md
bebop_bearings/: package.xml  setup.cfg  setup.py
bebop_bearings/bebop_bearings/: bearings.py  bearings1.py  bearings_based.py  rb.m
bebop_bearings/launch/: bebop.launch.py
bebop_controller/: package.xml  setup.cfg  setup.py
bebop_controller/bebop_controller/: controller.py  controller.txt  controller2.py  controller_follower.py  controller_follower_pid.py  controller_pid.py  controller_sta.py  formation_controller.py  pid.py  sta.py
bebop_controller/config/: pid.yaml
bebop_controller/launch/: pid.launch.py  pid_follower.launch.py  sta.launch.py
bebop_demo/: package.xml  setup.cfg  setup.py
bebop_demo/bebop_demo/: controller.py  crazyflie_controller.py  graficas.py  image_viewer.py  joystick.py  joystick_swarm.py  position_control.py  set_pose.py  setpoint.py  setpoint_com.py  setpoint_followers.py
bebop_demo/config/: bebop.yaml  bebop1.yaml  bebop_bridge.yaml  bebop_only.yaml  bebop_swarm.yaml  bebop_swarm3.yaml  bebop_swarm4.yaml  bebop_swarm5.yaml
bebop_demo/launch/: PID_individual.launch.py  STA_individual.launch.py  bebop.launch.py  bebop1.launch.py  bebop_joystick.launch.py  bebop_tracking.launch.py  cave_joystick.launch.py  cf_demo.py  individual.launch.py  individual_cave.launch.py  indiviual.launch.py  ionic_joystick.launch.py  multibebop_cave.launch.py  swarm.launch.py  swarm3.launch.py  swarm4.launch.py  swarm5.launch.py  swarm_joystick.launch.py  swarmbebop.launch.py  xacro.launch.py
bebop_demo/worlds/: bebop.sdf
bebop_gui/: package.xml  setup.cfg  setup.py
bebop_gui/bebop_gui/: gui_node.py  gui_node_one.py  gui_one.py  gui_swarm.py  gui_swarm_no_cameras.py  test.py
bebop_gui/launch/: bebop_gui.launch.py
bebop_gz/: package.xml  setup.cfg  setup.py  world_generator.py
bebop_gz/models/cave/: model.config  model.sdf
bebop_gz/models/parrot_bebop_2/: model.config  model.sdf  model.txt  model0.sdf  model00.sdf
bebop_gz/plugins/: CMakeLists.txt  CameraPublisherPlugin.cc  LeeVelocityController.cc  MulticopterVelocityControl.cc  MulticopterVelocityControl.hh  PIDController.cc  PIDController.hh  PPosePlugin.cc  RobotPosePublisher.cc  RobotPosePublisher.hh  SetPosePlugin.cc  SetPosePlugin.hh  VelocityControllerPID.cc  VelocityControllerPID.hh
bebop_gz/urdf/: bebop2.xacro
bebop_gz/worlds/: bebop.sdf  bebop1.sdf  bebop3.sdf  bebop4.sdf  bebop5.sdf  bebop_PID.sdf  bebop_camera.sdf  bebop_multi.world  bebop_only.sdf  bebop_swarm2.sdf  bebop_swarm2.txt  bebop_wh.sdf  bebop_world.sdf  cave_1.sdf  cave_2.sdf  cavemod.sdf  crazyflie_world.sdf  ionic_1.sdf  multicopter_velocity_control.sdf  multicopter_velocity_control_forest.sdf
bebop_ros_gz/: CMakeLists.txt  package.xml
bebop_ros_gz/msg/: Full.msg
